# CudaPixelErrorCalc

./: .gitignore  CMakeLists.txt  README.md
ext/vcl/: pseudocolor-impl.hpp  pseudocolor.hpp  vec4.hpp
include/: CPEC.h
lib/Debug/: cuda_pixel_error_calc.lib
lib/Release/: cuda_pixel_error_calc.lib
main/: CMakeLists.txt  main.cpp
src/: CPEC.cu
test/: CMakeLists.txt  test.cpp
